@@ -1,15 +1,11 @@
 package nl.jixxed.eliteodysseymaterials.templates.horizons.shipbuilder.stats;
 
 import javafx.geometry.Orientation;
-import javafx.scene.control.Label;
-import javafx.scene.control.Separator;
-import javafx.scene.control.ToggleButton;
-import javafx.scene.layout.HBox;
 import javafx.scene.paint.Color;
-import javafx.scene.shape.Circle;
 import lombok.extern.slf4j.Slf4j;
 import nl.jixxed.eliteodysseymaterials.builder.BoxBuilder;
 import nl.jixxed.eliteodysseymaterials.builder.LabelBuilder;
+import nl.jixxed.eliteodysseymaterials.builder.SegmentedBarBuilder;
 import nl.jixxed.eliteodysseymaterials.builder.ToggleButtonBuilder;
 import nl.jixxed.eliteodysseymaterials.domain.ApplicationState;
 import nl.jixxed.eliteodysseymaterials.domain.ships.ShipModule;
@@ -24,25 +20,22 @@ import nl.jixxed.eliteodysseymaterials.helper.ScalingHelper;
 import nl.jixxed.eliteodysseymaterials.service.LocaleService;
 import nl.jixxed.eliteodysseymaterials.service.event.EventService;
 import nl.jixxed.eliteodysseymaterials.service.event.ShipConfigEvent;
-import nl.jixxed.eliteodysseymaterials.templates.Template;
 import nl.jixxed.eliteodysseymaterials.templates.components.GrowingRegion;
 import nl.jixxed.eliteodysseymaterials.templates.components.segmentbar.SegmentType;
 import nl.jixxed.eliteodysseymaterials.templates.components.segmentbar.TypeSegment;
 import nl.jixxed.eliteodysseymaterials.templates.components.segmentbar.TypeSegmentView;
-import nl.jixxed.eliteodysseymaterials.templates.destroyables.DestroyableLabel;
-import org.controlsfx.control.SegmentedBar;
+import nl.jixxed.eliteodysseymaterials.templates.destroyables.*;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 @Slf4j
-public class WeaponStats extends Stats implements Template {
+public class WeaponStats extends Stats implements DestroyableTemplate {
     private DestroyableLabel rawDamage;
     private RangeIndicator ammoIndicator;
     private RangeIndicator bustIndicator;
     Set<HardpointGroup> selectedHardpointGroups = new HashSet<>(Set.of(HardpointGroup.A, HardpointGroup.B, HardpointGroup.C, HardpointGroup.D));
-    private SegmentedBar<TypeSegment> segmentedBar;
+    private DestroyableSegmentedBar<TypeSegment> segmentedBar;
     private TypeSegment absolutePercentageGroup;
     private TypeSegment kineticPercentageGroup;
     private TypeSegment thermalPercentageGroup;
@@ -65,14 +58,19 @@ public class WeaponStats extends Stats implements Template {
 
     @Override
     public void initComponents() {
-        this.getChildren().add(BoxBuilder.builder().withNodes(new GrowingRegion(), createTitle("ship.stats.weapon"), new GrowingRegion()).buildHBox());
-        this.getChildren().add(new Separator(Orientation.HORIZONTAL));
+        this.getNodes().add(BoxBuilder.builder()
+                .withNodes(new GrowingRegion(), createTitle("ship.stats.weapon"), new GrowingRegion())
+                .buildHBox());
+        this.getNodes().add(new DestroyableSeparator(Orientation.HORIZONTAL));
 
-        ToggleButton[] buttons = Arrays.stream(HardpointGroup.values()).map(group -> {
-            final ToggleButton groupButton = ToggleButtonBuilder.builder().withStyleClass("toggle-button-stats-hardpoint").withNonLocalizedText(group.name()).build();
+        DestroyableToggleButton[] buttons = Arrays.stream(HardpointGroup.values()).map(group -> {
+            final DestroyableToggleButton groupButton = ToggleButtonBuilder.builder()
+                    .withStyleClass("toggle-button-stats-hardpoint")
+                    .withNonLocalizedText(group.name())
+                    .build();
             groupButton.setSelected(true);
             groupButton.setFocusTraversable(false);
-            groupButton.selectedProperty().addListener((observable, oldValue, newValue) -> {
+            groupButton.selectedProperty().addListener((_, _, newValue) -> {
                 if (newValue) {
                     selectedHardpointGroups.add(group);
                 } else {
@@ -81,47 +79,51 @@ public class WeaponStats extends Stats implements Template {
                 update();
             });
             return groupButton;
-        }).toArray(ToggleButton[]::new);
+        }).toArray(DestroyableToggleButton[]::new);
 
-        HBox box = BoxBuilder.builder().withNodes(buttons).buildHBox();
-        this.getChildren().add(box);
+        DestroyableHBox box = BoxBuilder.builder()
+                .withNodes(buttons)
+                .buildHBox();
+        this.getNodes().add(box);
         this.rawDamage = createValueSmallLabel("ship.stats.weapon.rawdamage.value", String.format("%.2f", 0d));
 
-        this.getChildren().add(BoxBuilder.builder().withNodes(createLabel("ship.stats.weapon.rawdamage"), new GrowingRegion(), this.rawDamage).buildHBox());
-        this.getChildren().add(BoxBuilder.builder().withStyleClass("weapon-stats-legend-box").withNodes(
-                BoxBuilder.builder().withNodes(
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_THERMAL_COLOR), new GrowingRegion()).buildHBox(),
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.thermalpercentage"), new GrowingRegion()).buildHBox()
+        this.getNodes().add(BoxBuilder.builder()
+                .withNodes(createLabel("ship.stats.weapon.rawdamage"), new GrowingRegion(), this.rawDamage)
+                .buildHBox());
+        this.getNodes().add(BoxBuilder.builder()
+                .withStyleClass("weapon-stats-legend-box")
+                .withNodes(BoxBuilder.builder()
+                                .withNodes(BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_THERMAL_COLOR), new GrowingRegion())
+                                                .buildHBox(),
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.thermalpercentage"), new GrowingRegion())
+                                                .buildHBox()
+                                )
+                                .buildVBox(),
+                        new GrowingRegion(),
+                        BoxBuilder.builder()
+                                .withNodes(BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_KINETIC_COLOR), new GrowingRegion())
+                                                .buildHBox(),
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.kineticpercentage"), new GrowingRegion())
+                                                .buildHBox()
+                                )
+                                .buildVBox(),
+                        new GrowingRegion(),
+                        BoxBuilder.builder()
+                                .withNodes(BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_EXPLOSIVE_COLOR), new GrowingRegion())
+                                                .buildHBox(),
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.explosivepercentage"), new GrowingRegion())
+                                                .buildHBox()
+                                )
+                                .buildVBox()
+                )
+                .buildHBox());
 
-                ).buildVBox(),
-                new GrowingRegion(),
-                BoxBuilder.builder().withNodes(
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_KINETIC_COLOR), new GrowingRegion()).buildHBox(),
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.kineticpercentage"), new GrowingRegion()).buildHBox()
-
-                ).buildVBox(),
-                new GrowingRegion(),
-                BoxBuilder.builder().withNodes(
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_EXPLOSIVE_COLOR), new GrowingRegion()).buildHBox(),
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.explosivepercentage"), new GrowingRegion()).buildHBox()
-
-                ).buildVBox()
-        ).buildHBox());
-
-        this.segmentedBar = new SegmentedBar<>();
-        this.segmentedBar.getStyleClass().add("power-progressbar");
-        this.segmentedBar.setOrientation(Orientation.HORIZONTAL);
-        this.segmentedBar.setInfoNodeFactory(segment -> LabelBuilder.builder()
-                .withStyleClass("power-progressbar-label").withNonLocalizedText(segment.getText() + ": " + LocaleService.getLocalizedStringForCurrentLocale("ship.stats.weapon.value", String.format("%.2f", segment.getValue()))).build());
-        this.segmentedBar.setSegmentViewFactory(segment -> new TypeSegmentView(segment, Map.of(
-                SegmentType.HARDPOINT_THERMAL, HARDPOINT_THERMAL_COLOR,
-                SegmentType.HARDPOINT_KINETIC, HARDPOINT_KINETIC_COLOR,
-                SegmentType.HARDPOINT_EXPLOSIVE, HARDPOINT_EXPLOSIVE_COLOR,
-                SegmentType.HARDPOINT_ABSOLUTE, HARDPOINT_ABSOLUTE_COLOR,
-                SegmentType.HARDPOINT_CAUSTIC, HARDPOINT_CAUSTIC_COLOR,
-                SegmentType.HARDPOINT_ANTIXENO, HARDPOINT_ANTIXENO_COLOR,
-                SegmentType.HARDPOINT_NONE, Color.rgb(128, 128, 128)
-        ), false));
         this.thermalPercentageGroup = new TypeSegment(0D, SegmentType.HARDPOINT_THERMAL);
         this.kineticPercentageGroup = new TypeSegment(0D, SegmentType.HARDPOINT_KINETIC);
         this.explosivePercentageGroup = new TypeSegment(0D, SegmentType.HARDPOINT_EXPLOSIVE);
@@ -129,48 +131,84 @@ public class WeaponStats extends Stats implements Template {
         this.causticPercentageGroup = new TypeSegment(0D, SegmentType.HARDPOINT_CAUSTIC);
         this.antiXenoPercentageGroup = new TypeSegment(0D, SegmentType.HARDPOINT_ANTIXENO);
         this.noDamageGroup = new TypeSegment(100D, SegmentType.HARDPOINT_NONE);
-        this.segmentedBar.getSegments().addAll(absolutePercentageGroup, kineticPercentageGroup, thermalPercentageGroup, explosivePercentageGroup, causticPercentageGroup, antiXenoPercentageGroup, noDamageGroup);
-        this.getChildren().add(this.segmentedBar);
-        this.getChildren().add(BoxBuilder.builder().withStyleClass("weapon-stats-legend-box").withNodes(
-                BoxBuilder.builder().withNodes(
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.absolutepercentage"), new GrowingRegion()).buildHBox(),
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_ABSOLUTE_COLOR), new GrowingRegion()).buildHBox()
 
-                ).buildVBox(),
-                new GrowingRegion(),
-                BoxBuilder.builder().withNodes(
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.causticpercentage"), new GrowingRegion()).buildHBox(),
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_CAUSTIC_COLOR), new GrowingRegion()).buildHBox()
+        this.segmentedBar = SegmentedBarBuilder.builder(TypeSegment.class)
+                .withStyleClass("power-progressbar")
+                .withOrientation(Orientation.HORIZONTAL)
+                .withInfoNodeFactory(segment -> LabelBuilder.builder()
+                        .withStyleClass("power-progressbar-label")
+                        .withNonLocalizedText(segment.getText() + ": " + LocaleService.getLocalizedStringForCurrentLocale("ship.stats.weapon.value", String.format("%.2f", segment.getValue())))
+                        .build())
+                .withSegmentViewFactory(segment -> new TypeSegmentView(segment, Map.of(
+                        SegmentType.HARDPOINT_THERMAL, HARDPOINT_THERMAL_COLOR,
+                        SegmentType.HARDPOINT_KINETIC, HARDPOINT_KINETIC_COLOR,
+                        SegmentType.HARDPOINT_EXPLOSIVE, HARDPOINT_EXPLOSIVE_COLOR,
+                        SegmentType.HARDPOINT_ABSOLUTE, HARDPOINT_ABSOLUTE_COLOR,
+                        SegmentType.HARDPOINT_CAUSTIC, HARDPOINT_CAUSTIC_COLOR,
+                        SegmentType.HARDPOINT_ANTIXENO, HARDPOINT_ANTIXENO_COLOR,
+                        SegmentType.HARDPOINT_NONE, Color.rgb(128, 128, 128)
+                ), false))
+                .withSegments(absolutePercentageGroup, kineticPercentageGroup, thermalPercentageGroup, explosivePercentageGroup, causticPercentageGroup, antiXenoPercentageGroup, noDamageGroup)
+                .build();
 
-                ).buildVBox(),
-                new GrowingRegion(),
-                BoxBuilder.builder().withNodes(
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.antixenopercentage"), new GrowingRegion()).buildHBox(),
-                        BoxBuilder.builder().withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_ANTIXENO_COLOR), new GrowingRegion()).buildHBox()
-
-                ).buildVBox()
-        ).buildHBox());
+        this.getNodes().add(this.segmentedBar);
+        this.getNodes().add(BoxBuilder.builder()
+                .withStyleClass("weapon-stats-legend-box")
+                .withNodes(
+                        BoxBuilder.builder()
+                                .withNodes(
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.absolutepercentage"), new GrowingRegion())
+                                                .buildHBox(),
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_ABSOLUTE_COLOR), new GrowingRegion())
+                                                .buildHBox()
+                                ).buildVBox(),
+                        new GrowingRegion(),
+                        BoxBuilder.builder()
+                                .withNodes(
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.causticpercentage"), new GrowingRegion())
+                                                .buildHBox(),
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_CAUSTIC_COLOR), new GrowingRegion())
+                                                .buildHBox()
+                                ).buildVBox(),
+                        new GrowingRegion(),
+                        BoxBuilder.builder()
+                                .withNodes(
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendLabel("ship.stats.weapon.antixenopercentage"), new GrowingRegion())
+                                                .buildHBox(),
+                                        BoxBuilder.builder()
+                                                .withNodes(new GrowingRegion(), createLegendCircle(HARDPOINT_ANTIXENO_COLOR), new GrowingRegion())
+                                                .buildHBox()
+                                ).buildVBox()
+                ).buildHBox());
 
         bustIndicator = new RangeIndicator(0D, 0D, 0D, "ship.stats.weapon.burstduration", "ship.stats.weapon.burstduration.value");
         ammoIndicator = new RangeIndicator(0D, 0D, 0D, "ship.stats.weapon.ammoduration", "ship.stats.weapon.ammoduration.value");
-        this.getChildren().addAll(bustIndicator, ammoIndicator);
+        this.getNodes().addAll(bustIndicator, ammoIndicator);
 
     }
 
-    private Circle createLegendCircle(Color powerGroupColor) {
-        final Circle circle = new Circle();
-        circle.radiusProperty().bind(ScalingHelper.getPixelDoubleBindingFromEm(0.5D));
+    private DestroyableCircle createLegendCircle(Color powerGroupColor) {
+        final DestroyableCircle circle = new DestroyableCircle();
+        circle.addBinding(circle.radiusProperty(), ScalingHelper.getPixelDoubleBindingFromEm(0.5D));
         circle.setFill(powerGroupColor);
         return circle;
     }
 
-    private Label createLegendLabel(String key) {
-        return LabelBuilder.builder().withStyleClass("weapon-stats-legend-label").withText(LocaleService.getStringBinding(key)).build();
+    private DestroyableLabel createLegendLabel(String key) {
+        return LabelBuilder.builder()
+                .withStyleClass("weapon-stats-legend-label")
+                .withText(key)
+                .build();
     }
 
     @Override
     public void initEventHandling() {
-        eventListeners.add(EventService.addListener(true, this, ShipConfigEvent.class, event -> update()));
+        register(EventService.addListener(true, this, ShipConfigEvent.class, _ -> update()));
     }
 
     private List<ShipModule> selectedHardPoints() {
@@ -179,7 +217,7 @@ public class WeaponStats extends Stats implements Template {
                 .filter(Slot::isOccupied)
                 .filter(slot -> selectedHardpointGroups.contains(slot.getHardpointGroup()))
                 .map(Slot::getShipModule)
-                .collect(Collectors.toList())).orElse(Collections.emptyList());
+                .toList()).orElse(Collections.emptyList());
     }
 
     private double calculateRawDamage() {
@@ -266,28 +304,26 @@ public class WeaponStats extends Stats implements Template {
     private double calculateBurstDuration(int pips) {
 
         final double totalEps = selectedHardPoints().stream()
-                .map(shipModule -> {
-                    return energyPerSecond(shipModule, false);
-                })
+                .map(shipModule -> energyPerSecond(shipModule, false))
                 .mapToDouble(Double::doubleValue)
                 .sum();
-        AtomicReference<Double> eps_cur = new AtomicReference<>(totalEps);
+        AtomicReference<Double> epsCur = new AtomicReference<>(totalEps);
 
         final Optional<Slot> powerDistributor = getShip().flatMap(ship -> ship.getCoreSlots().stream().filter(slot -> slot.getSlotType().equals(SlotType.CORE_POWER_DISTRIBUTION)).findFirst().filter(Slot::isOccupied));
 
         final double multiplier = Math.pow(pips / 8.0, 1.1);
         final double weaponCapacity = (double) powerDistributor.map(Slot::getShipModule).map(sm -> sm.getAttributeValue(HorizonsModifier.WEAPONS_CAPACITY)).orElse(0D);
         final double weaponRecharge = (double) powerDistributor.map(Slot::getShipModule).map(sm -> sm.getAttributeValue(HorizonsModifier.WEAPONS_RECHARGE)).orElse(0D);
-
-        AtomicReference<Double> wepcap_burst_cur = new AtomicReference<>(weaponCapacity / Math.max(0, eps_cur.get() - weaponRecharge * multiplier));
+        //fixme div by 0
+        AtomicReference<Double> wepcapBurstCur = new AtomicReference<>(weaponCapacity / Math.max(0, epsCur.get() - weaponRecharge * multiplier));
         selectedHardPoints().forEach(shipModule -> {
-            if (wepcap_burst_cur.get() >= secondsPerClip(shipModule, false)) {
-                eps_cur.set(eps_cur.get() - energyPerSecond(shipModule, false) + energyPerSecond(shipModule, true));
-                wepcap_burst_cur.set(weaponCapacity / Math.max(0, eps_cur.get() - weaponRecharge * multiplier));
+            if (wepcapBurstCur.get() >= secondsPerClip(shipModule, false)) {
+                epsCur.set(epsCur.get() - energyPerSecond(shipModule, false) + energyPerSecond(shipModule, true));
+                wepcapBurstCur.set(weaponCapacity / Math.max(0, epsCur.get() - weaponRecharge * multiplier));
             }
         });
 
-        return wepcap_burst_cur.get();
+        return wepcapBurstCur.get();
     }
 
     private double secondsPerClip(ShipModule shipModule, boolean sustained) {
@@ -326,9 +362,9 @@ public class WeaponStats extends Stats implements Template {
     }
 
     private double energyPerSecond(ShipModule shipModule, boolean sustained) {
-        final double distdraw = shipModule.getAttributeValueOrDefault(HorizonsModifier.DISTRIBUTOR_DRAW, 0D);
+        final double distributorDraw = shipModule.getAttributeValueOrDefault(HorizonsModifier.DISTRIBUTOR_DRAW, 0D);
         final double rateOfFire = rateOfFire(shipModule, sustained);
-        return distdraw * (Double.isFinite(rateOfFire) ? rateOfFire : 1);
+        return distributorDraw * (Double.isFinite(rateOfFire) ? rateOfFire : 1);
     }
 
     private double dps(ShipModule shipModule, boolean sustained) {
@@ -352,9 +388,7 @@ public class WeaponStats extends Stats implements Template {
 
     private double calculateMinimumAmmoDuration() {
         return selectedHardPoints().stream()
-                .map(shipModule -> {
-                    return calculateAmmoDuration(shipModule, 1);
-                })
+                .map(shipModule -> calculateAmmoDuration(shipModule, 1))
                 .mapToDouble(Double::doubleValue)
                 .max().orElse(0D);
 
@@ -362,9 +396,7 @@ public class WeaponStats extends Stats implements Template {
 
     private double calculateCurrentAmmoDuration() {
         return selectedHardPoints().stream()
-                .map(shipModule -> {
-                    return calculateAmmoDuration(shipModule, ApplicationState.getInstance().getWeaponPips());
-                })
+                .map(shipModule -> calculateAmmoDuration(shipModule, ApplicationState.getInstance().getWeaponPips()))
                 .mapToDouble(Double::doubleValue)
                 .max().orElse(0D);
 
@@ -375,10 +407,10 @@ public class WeaponStats extends Stats implements Template {
             return Double.POSITIVE_INFINITY;
         }
 
-        var dps_nodistdraw = 0d;
-        var dps_distdraw = 0d;
-        var ammotime_wepcap = Double.POSITIVE_INFINITY;
-        var ammotime_nocap = Double.POSITIVE_INFINITY;
+        var dpsNoDistributorDraw = 0d;
+        var dpsDistributorDraw = 0d;
+        var ammoTimeWeaponCap = Double.POSITIVE_INFINITY;
+        var ammoTimeNoCap = Double.POSITIVE_INFINITY;
 
 
         final double totalEps = selectedHardPoints().stream()
@@ -389,39 +421,37 @@ public class WeaponStats extends Stats implements Template {
                 .map(shipModule2 -> energyPerSecond(shipModule2, true))
                 .mapToDouble(Double::doubleValue)
                 .sum();
-        AtomicReference<Double> eps_cur = new AtomicReference<>(totalEps);
+        AtomicReference<Double> epsCurrent = new AtomicReference<>(totalEps);
 
         final Optional<Slot> powerDistributor = getShip().flatMap(ship -> ship.getCoreSlots().stream().filter(slot -> slot.getSlotType().equals(SlotType.CORE_POWER_DISTRIBUTION)).findFirst());
 
         final double multiplier = Math.pow(pips / 8.0, 1.1);
         final double weaponCapacity = (double) powerDistributor.map(Slot::getShipModule).map(sm -> sm.getAttributeValue(HorizonsModifier.WEAPONS_CAPACITY)).orElse(0D);
         final double weaponRecharge = (double) powerDistributor.map(Slot::getShipModule).map(sm -> sm.getAttributeValue(HorizonsModifier.WEAPONS_RECHARGE)).orElse(0D);
-
-        AtomicReference<Double> wepcap_burst_cur = new AtomicReference<>(weaponCapacity / Math.max(0, eps_cur.get() - weaponRecharge * multiplier));
+        //fixme div by 0
+        AtomicReference<Double> weaponCapBurstCurrent = new AtomicReference<>(weaponCapacity / Math.max(0, epsCurrent.get() - weaponRecharge * multiplier));
         selectedHardPoints().forEach(shipModule2 -> {
-            if (wepcap_burst_cur.get() >= secondsPerClip(shipModule2, false)) {
-                eps_cur.set(eps_cur.get() - energyPerSecond(shipModule2, false) + energyPerSecond(shipModule2, true));
-                wepcap_burst_cur.set(weaponCapacity / Math.max(0, eps_cur.get() - weaponRecharge * multiplier));
+            if (weaponCapBurstCurrent.get() >= secondsPerClip(shipModule2, false)) {
+                epsCurrent.set(epsCurrent.get() - energyPerSecond(shipModule2, false) + energyPerSecond(shipModule2, true));
+                weaponCapBurstCurrent.set(weaponCapacity / Math.max(0, epsCurrent.get() - weaponRecharge * multiplier));
             }
         });
 
-        var wepchg_sustain_cur = Math.min(Math.max(weaponRecharge * multiplier / totalEpsSustained, 0), 1);
+        var weaponChargeSustainedCurrent = Math.clamp(weaponRecharge * multiplier / totalEpsSustained, 0, 1);
         double distdraw = shipModule.getAttributeValueOrDefault(HorizonsModifier.DISTRIBUTOR_DRAW, 0D);
         double ammoClipSize = shipModule.getAttributeValueOrDefault(HorizonsModifier.AMMO_CLIP_SIZE, Double.POSITIVE_INFINITY);
         double ammoMaximum = shipModule.getAttributeValueOrDefault(HorizonsModifier.AMMO_MAXIMUM, Double.POSITIVE_INFINITY);
         var ammotime = Double.isFinite(ammoClipSize) ? (secondsPerClip(shipModule, true) * ((ammoClipSize + ammoMaximum) / shotsFiredPerClip(shipModule))) : Double.POSITIVE_INFINITY;
         if (distdraw > 0D) {
-            dps_distdraw += dps(shipModule, true);
-            ammotime_wepcap = Math.min(ammotime_wepcap, ammotime);
+            dpsDistributorDraw += dps(shipModule, true);
+            ammoTimeWeaponCap = Math.min(ammoTimeWeaponCap, ammotime);
         } else {
-            dps_nodistdraw += dps(shipModule, true);
-            ammotime_nocap = Math.min(ammotime_nocap, ammotime);
+            dpsNoDistributorDraw += dps(shipModule, true);
+            ammoTimeNoCap = Math.min(ammoTimeNoCap, ammotime);
         }
-        var curWpnSus = ((dps_nodistdraw + (dps_distdraw > 0D ? (dps_distdraw * wepchg_sustain_cur) : 0)) / dps(shipModule, false));
-        var ammWpnDur = Math.min(ammotime_nocap, ((ammotime_wepcap <= wepcap_burst_cur.get()) ? ammotime_wepcap : (wepcap_burst_cur.get() + (ammotime_wepcap - wepcap_burst_cur.get()) / curWpnSus)));
+        var curWpnSus = ((dpsNoDistributorDraw + (dpsDistributorDraw > 0D ? (dpsDistributorDraw * weaponChargeSustainedCurrent) : 0)) / dps(shipModule, false));
 
-
-        return ammWpnDur;
+        return Math.min(ammoTimeNoCap, ((ammoTimeWeaponCap <= weaponCapBurstCurrent.get()) ? ammoTimeWeaponCap : (weaponCapBurstCurrent.get() + (ammoTimeWeaponCap - weaponCapBurstCurrent.get()) / curWpnSus)));
     }
 
     private double calculateMaximumAmmoDuration() {
@@ -442,7 +472,7 @@ public class WeaponStats extends Stats implements Template {
         causticPercentageGroup.setValue(calculateCausticPercentage());
         antiXenoPercentageGroup.setValue(calculateAntiXenoPercentage());
         noDamageGroup.setValue(calculateRawDamage() == 0d ? 100d : 0d);
-        this.rawDamage.textProperty().bind(LocaleService.getStringBinding("ship.stats.weapon.rawdamage.value", String.format("%.2f", calculateRawDamage())));
+        this.rawDamage.addBinding(this.rawDamage.textProperty(), LocaleService.getStringBinding("ship.stats.weapon.rawdamage.value", String.format("%.2f", calculateRawDamage())));
 
         bustIndicator.updateValues(calculateMinimumBurstDuration(), calculateCurrentBurstDuration(), calculateMaximumBurstDuration());
         ammoIndicator.updateValues(calculateMinimumAmmoDuration(), calculateCurrentAmmoDuration(), calculateMaximumAmmoDuration());
